<resources>
    <string name="app_name">Coffe Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_text">Coffee to Go is an application in which you can order coffee online and pick it up at the coffee shop closest to you. Now lets tell you how it works</string>
    <string name="two_text">The map shows the nearest coffee shops to you, choose the most convenient one for you. The app will tell you how long to go to it.</string>
    <string name="three_text">Choose your favorite drinks and desserts. You can change their composition and choose the time when it will be convenient for you to pick them up.</string>
    <string name="four_text">At the specified time, come to the coffee shop and enjoy the taste of coffee, without queuing and waiting.</string>
    <string name="hello">Hello!</string>
    <string name="search">Search for a coffee shop</string>
    <string name="making">Making an order</string>
    <string name="receiving">Receiving an order</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="Continue">Continue</string>
    <string name="sign">Sign in</string>
    <string name="select">Select</string>
    <string name="shop">Coffee shop address</string>
    <string name="i_m_agree_with_privacy_policy_and_user_agreement">i’m agree with <b>privacy policy</b> <b>and user agreement</b></string>
    <string name="error">Ошибка!</string>
    <string name="error_text">Возникла какая-то ошибка</string>
    <string name="verify">Verify</string>
    <string name="code">Code</string>
    <string name="volume">Volume</string>
    <string name="_200_ml">200 ml</string>
    <string name="_300_ml">300 ml</string>
    <string name="_400_ml">400 ml</string>
    <string name="change_components">Change components</string>
    <string name="qr">QR</string>
    <string name="product_list">Product list</string>
    <string name="qr_code">QR code</string>
    <string name="varka_coffee">VARKA Coffee</string>
    <string name="list_is_empty">List is empty</string>
    <string name="hello_title">Hello!</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="want_to_view_our_location">Want to view our location?</string>
    <string name="yes">Yes\n</string>
    <string name="no">No</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>