<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/glav"
    android:gravity="center"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/image_caffe"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="center"
            android:src="@drawable/fluet" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/semi"
            android:gravity="center"
            android:text="Cappuccino"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/local"
            app:layout_constraintStart_toEndOf="@+id/local"
            app:layout_constraintTop_toTopOf="@+id/local" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/regu"
            android:gravity="center"
            android:text="from 180 ₽ "
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/local"
            app:layout_constraintStart_toEndOf="@+id/local"
            app:layout_constraintTop_toTopOf="@+id/local" />

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/stroke_buttom_item"
            android:fontFamily="@font/semi"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/select"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/pl_mn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/three_gray"
                android:fontFamily="@font/semi"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:tint="@color/two_gray" />

            <TextView
                android:id="@+id/count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:padding="2dp"
                android:text="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:tint="@color/two_gray" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/three_gray"
                android:fontFamily="@font/semi"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:tint="@color/two_gray" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>